added tests for changesets with webmock

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,9 @@ Style/SymbolArray:
 Style/WordArray:
   Enabled: false
 
+Style/RegexpLiteral:
+  Enabled: false
+
 Metrics/LineLength:
   Max: 135
   # To make it possible to copy or click on URIs in the code, we allow lines
